--- a/client/package.json
+++ b/client/package.json
@@ -9,12 +9,15 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.3",
     "@mui/joy": "^5.0.0-beta.0",
+    "@mui/material": "^5.14.3",
     "@testing-library/jest-dom": "^5.13.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
